[gd_scene load_steps=10 format=2]

[ext_resource path="res://Collisions and detections/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/enemyRammer_simple.png" type="Texture" id=2]
[ext_resource path="res://Enemies/EnemyRammer.gd" type="Script" id=3]
[ext_resource path="res://Vehicle/Shield1.png" type="Texture" id=4]
[ext_resource path="res://Collisions and detections/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Collisions and detections/RammerHitbox.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.65356, 6.48549 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.4706, 15.8823 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16.5, 16 )

[node name="EnemyRammer" type="KinematicBody2D" groups=[
"enemies",
]]
scale = Vector2( 1.7, 1.7 )
collision_layer = 8
collision_mask = 11
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.222722, 0.0545486 )
rotation = 1.5708
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.176777, 0.816988 )
rotation = 1.5708
scale = Vector2( 1.3, 1.3 )
shape = SubResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
collision_layer = 0
collision_mask = 4
script = ExtResource( 6 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -0.588235 )
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
position = Vector2( 0, -0.5 )
shape = SubResource( 3 )

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="DeathDelay" type="Timer" parent="."]

[node name="ShieldTest" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[editable path="Hitbox"]
[editable path="Hurtbox"]
